// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Navitem component > applies active styles when link is active 1`] = `
<DocumentFragment>
  .c1 {
  display: flex;
  width: 15.75rem;
  padding: 0.5rem 0.75rem;
  align-items: center;
  gap: 0.75rem;
  border-left: solid;
  border-left-width: 0.25rem;
  border-left-color: var(--primary-200, #177ba6);
}

.c0 {
  text-decoration: none;
}

.c2 {
  display: flex;
  width: 1.5625rem;
  height: 1.5625rem;
  justify-content: center;
  align-items: center;
  flex-shrink: 0;
}

.c3 {
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  line-height: 150%;
  letter-spacing: 0.00119rem;
  margin: 0;
  transition: opacity 0.5s ease-in-out,visibility 0.5s ease-in-out;
  opacity: 1;
  visibility: visible;
  color: var(--primary-200, #177BA6);
}

<div
    data-testid="Home-navlink"
  >
    <a
      aria-current="page"
      class="c0 active"
      data-discover="true"
      data-testid="Home"
      data-tooltip-content="Home"
      data-tooltip-id="navlink"
      href="/home"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          <svg
            data-testid="mock-icon"
            fill="var(--primary-200, #177BA6)"
            stroke="var(--primary-200, #177BA6)"
          />
        </div>
        <p
          class="c3"
        >
          Home
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Navitem component > applies correct icon color when link is active 1`] = `
<DocumentFragment>
  .c1 {
  display: flex;
  width: 15.75rem;
  padding: 0.5rem 0.75rem;
  align-items: center;
  gap: 0.75rem;
  border-left: solid;
  border-left-width: 0.25rem;
  border-left-color: var(--primary-200, #177ba6);
}

.c0 {
  text-decoration: none;
}

.c2 {
  display: flex;
  width: 1.5625rem;
  height: 1.5625rem;
  justify-content: center;
  align-items: center;
  flex-shrink: 0;
}

.c3 {
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  line-height: 150%;
  letter-spacing: 0.00119rem;
  margin: 0;
  transition: opacity 0.5s ease-in-out,visibility 0.5s ease-in-out;
  opacity: 1;
  visibility: visible;
  color: var(--primary-200, #177BA6);
}

<div
    data-testid="Home-navlink"
  >
    <a
      aria-current="page"
      class="c0 active"
      data-discover="true"
      data-testid="Home"
      data-tooltip-content="Home"
      data-tooltip-id="navlink"
      href="/home"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          <svg
            data-testid="mock-icon"
            fill="var(--primary-200, #177BA6)"
            stroke="var(--primary-200, #177BA6)"
          />
        </div>
        <p
          class="c3"
        >
          Home
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Navitem component > applies correct icon color when link is not active 1`] = `
<DocumentFragment>
  .c1 {
  display: flex;
  width: 15.75rem;
  padding: 0.5rem 0.75rem;
  align-items: center;
  gap: 0.75rem;
}

.c0 {
  text-decoration: none;
}

.c2 {
  display: flex;
  width: 1.5625rem;
  height: 1.5625rem;
  justify-content: center;
  align-items: center;
  flex-shrink: 0;
}

.c3 {
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  line-height: 150%;
  letter-spacing: 0.00119rem;
  margin: 0;
  transition: opacity 0.5s ease-in-out,visibility 0.5s ease-in-out;
  opacity: 1;
  visibility: visible;
  color: var(--neutral-400, #414141);
}

<div
    data-testid="Home-navlink"
  >
    <a
      class="c0"
      data-discover="true"
      data-testid="Home"
      data-tooltip-content="Home"
      data-tooltip-id="navlink"
      href="/home"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          <svg
            data-testid="mock-icon"
          />
        </div>
        <p
          class="c3"
        >
          Home
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Navitem component > does not apply active styles when link is not active 1`] = `
<DocumentFragment>
  .c1 {
  display: flex;
  width: 15.75rem;
  padding: 0.5rem 0.75rem;
  align-items: center;
  gap: 0.75rem;
}

.c0 {
  text-decoration: none;
}

.c2 {
  display: flex;
  width: 1.5625rem;
  height: 1.5625rem;
  justify-content: center;
  align-items: center;
  flex-shrink: 0;
}

.c3 {
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  line-height: 150%;
  letter-spacing: 0.00119rem;
  margin: 0;
  transition: opacity 0.5s ease-in-out,visibility 0.5s ease-in-out;
  opacity: 1;
  visibility: visible;
  color: var(--neutral-400, #414141);
}

<div
    data-testid="Home-navlink"
  >
    <a
      class="c0"
      data-discover="true"
      data-testid="Home"
      data-tooltip-content="Home"
      data-tooltip-id="navlink"
      href="/home"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          <svg
            data-testid="mock-icon"
          />
        </div>
        <p
          class="c3"
        >
          Home
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Navitem component > does not render expanded text when isExpanded is false 1`] = `
<DocumentFragment>
  .c1 {
  display: flex;
  width: 15.75rem;
  padding: 0.5rem 0.75rem;
  align-items: center;
  gap: 0.75rem;
  border-left: solid;
  border-left-width: 0.25rem;
  border-left-color: var(--primary-200, #177ba6);
}

.c0 {
  text-decoration: none;
}

.c2 {
  display: flex;
  width: 1.5625rem;
  height: 1.5625rem;
  justify-content: center;
  align-items: center;
  flex-shrink: 0;
}

.c3 {
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  line-height: 150%;
  letter-spacing: 0.00119rem;
  margin: 0;
  transition: opacity 0.5s ease-in-out,visibility 0.5s ease-in-out;
  opacity: 0;
  visibility: hidden;
  color: var(--primary-200, #177BA6);
}

<div
    data-testid="Home-navlink"
  >
    <a
      class="c0"
      data-discover="true"
      data-testid="Home"
      data-tooltip-content="Home"
      data-tooltip-id="navlink"
      href="/home"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          <svg
            data-testid="mock-icon"
            fill="var(--primary-200, #177BA6)"
            stroke="var(--primary-200, #177BA6)"
          />
        </div>
        <p
          class="c3"
        >
          Home
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Navitem component > does not render icon when not provided 1`] = `
<DocumentFragment>
  .c1 {
  display: flex;
  width: 15.75rem;
  padding: 0.5rem 0.75rem;
  align-items: center;
  gap: 0.75rem;
  border-left: solid;
  border-left-width: 0.25rem;
  border-left-color: var(--primary-200, #177ba6);
}

.c0 {
  text-decoration: none;
}

.c2 {
  display: flex;
  width: 1.5625rem;
  height: 1.5625rem;
  justify-content: center;
  align-items: center;
  flex-shrink: 0;
}

.c3 {
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  line-height: 150%;
  letter-spacing: 0.00119rem;
  margin: 0;
  transition: opacity 0.5s ease-in-out,visibility 0.5s ease-in-out;
  opacity: 1;
  visibility: visible;
  color: var(--primary-200, #177BA6);
}

<div
    data-testid="Home-navlink"
  >
    <a
      class="c0"
      data-discover="true"
      data-testid="Home"
      data-tooltip-content="Home"
      data-tooltip-id="navlink"
      href="/home"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
        />
        <p
          class="c3"
        >
          Home
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Navitem component > renders expanded text when isExpanded is true 1`] = `
<DocumentFragment>
  .c1 {
  display: flex;
  width: 15.75rem;
  padding: 0.5rem 0.75rem;
  align-items: center;
  gap: 0.75rem;
  border-left: solid;
  border-left-width: 0.25rem;
  border-left-color: var(--primary-200, #177ba6);
}

.c0 {
  text-decoration: none;
}

.c2 {
  display: flex;
  width: 1.5625rem;
  height: 1.5625rem;
  justify-content: center;
  align-items: center;
  flex-shrink: 0;
}

.c3 {
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  line-height: 150%;
  letter-spacing: 0.00119rem;
  margin: 0;
  transition: opacity 0.5s ease-in-out,visibility 0.5s ease-in-out;
  opacity: 1;
  visibility: visible;
  color: var(--primary-200, #177BA6);
}

<div
    data-testid="Home-navlink"
  >
    <a
      class="c0"
      data-discover="true"
      data-testid="Home"
      data-tooltip-content="Home"
      data-tooltip-id="navlink"
      href="/home"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          <svg
            data-testid="mock-icon"
            fill="var(--primary-200, #177BA6)"
            stroke="var(--primary-200, #177BA6)"
          />
        </div>
        <p
          class="c3"
        >
          Home
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Navitem component > renders icon when provided 1`] = `
<DocumentFragment>
  .c1 {
  display: flex;
  width: 15.75rem;
  padding: 0.5rem 0.75rem;
  align-items: center;
  gap: 0.75rem;
  border-left: solid;
  border-left-width: 0.25rem;
  border-left-color: var(--primary-200, #177ba6);
}

.c0 {
  text-decoration: none;
}

.c2 {
  display: flex;
  width: 1.5625rem;
  height: 1.5625rem;
  justify-content: center;
  align-items: center;
  flex-shrink: 0;
}

.c3 {
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  line-height: 150%;
  letter-spacing: 0.00119rem;
  margin: 0;
  transition: opacity 0.5s ease-in-out,visibility 0.5s ease-in-out;
  opacity: 1;
  visibility: visible;
  color: var(--primary-200, #177BA6);
}

<div
    data-testid="Home-navlink"
  >
    <a
      class="c0"
      data-discover="true"
      data-testid="Home"
      data-tooltip-content="Home"
      data-tooltip-id="navlink"
      href="/home"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          <svg
            data-testid="mock-icon"
            fill="var(--primary-200, #177BA6)"
            stroke="var(--primary-200, #177BA6)"
          />
        </div>
        <p
          class="c3"
        >
          Home
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Navitem component > renders with correct text 1`] = `
<DocumentFragment>
  .c1 {
  display: flex;
  width: 15.75rem;
  padding: 0.5rem 0.75rem;
  align-items: center;
  gap: 0.75rem;
  border-left: solid;
  border-left-width: 0.25rem;
  border-left-color: var(--primary-200, #177ba6);
}

.c0 {
  text-decoration: none;
}

.c2 {
  display: flex;
  width: 1.5625rem;
  height: 1.5625rem;
  justify-content: center;
  align-items: center;
  flex-shrink: 0;
}

.c3 {
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  line-height: 150%;
  letter-spacing: 0.00119rem;
  margin: 0;
  transition: opacity 0.5s ease-in-out,visibility 0.5s ease-in-out;
  opacity: 1;
  visibility: visible;
  color: var(--primary-200, #177BA6);
}

<div
    data-testid="Home-navlink"
  >
    <a
      class="c0"
      data-discover="true"
      data-testid="Home"
      data-tooltip-content="Home"
      data-tooltip-id="navlink"
      href="/home"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          <svg
            data-testid="mock-icon"
            fill="var(--primary-200, #177BA6)"
            stroke="var(--primary-200, #177BA6)"
          />
        </div>
        <p
          class="c3"
        >
          Home
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Navitem component > renders without crashing 1`] = `
<DocumentFragment>
  .c1 {
  display: flex;
  width: 15.75rem;
  padding: 0.5rem 0.75rem;
  align-items: center;
  gap: 0.75rem;
  border-left: solid;
  border-left-width: 0.25rem;
  border-left-color: var(--primary-200, #177ba6);
}

.c0 {
  text-decoration: none;
}

.c2 {
  display: flex;
  width: 1.5625rem;
  height: 1.5625rem;
  justify-content: center;
  align-items: center;
  flex-shrink: 0;
}

.c3 {
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  line-height: 150%;
  letter-spacing: 0.00119rem;
  margin: 0;
  transition: opacity 0.5s ease-in-out,visibility 0.5s ease-in-out;
  opacity: 1;
  visibility: visible;
  color: var(--primary-200, #177BA6);
}

<div
    data-testid="Home-navlink"
  >
    <a
      class="c0"
      data-discover="true"
      data-testid="Home"
      data-tooltip-content="Home"
      data-tooltip-id="navlink"
      href="/home"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          <svg
            data-testid="mock-icon"
            fill="var(--primary-200, #177BA6)"
            stroke="var(--primary-200, #177BA6)"
          />
        </div>
        <p
          class="c3"
        >
          Home
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;
